--- a/Views/Choice/Delete.cshtml
+++ b/Views/Choice/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model TeaHouse.Models.Bill
+﻿@model TeaHouse.Models.Choice
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Bill</h4>
+    <h4>Choice</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,6 +25,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.OrderTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Status)
         </dd>
 
     </dl>
