--- a/Views/Choice/Details.cshtml
+++ b/Views/Choice/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TeaHouse.Models.Bill
+﻿@model TeaHouse.Models.Choice
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Bill</h4>
+    <h4>Choice</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -26,9 +26,17 @@
             @Html.DisplayFor(model => model.OrderTime)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Status)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Status)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
