--- a/Views/Choice/Index.cshtml
+++ b/Views/Choice/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TeaHouse.Models.Bill>
+﻿@model IEnumerable<TeaHouse.Models.Choice>
 
 @{
     ViewBag.Title = "Index";
@@ -17,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.OrderTime)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Status)
+        </th>
         <th></th>
     </tr>
 
@@ -29,9 +32,12 @@
             @Html.DisplayFor(modelItem => item.OrderTime)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.DisplayFor(modelItem => item.Status)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
