--- a/Views/OrderModel/Details.cshtml
+++ b/Views/OrderModel/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.User)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
 
         <dd>
