--- a/Views/OrderModel/Index.cshtml
+++ b/Views/OrderModel/Index.cshtml
@@ -1,40 +1,28 @@
-﻿@model PagedList.IPagedList<TeaHouse.Models.Choice>
+﻿
+@model PagedList.IPagedList<TeaHouse.Models.Choice>
 @using PagedList.Mvc;
 
 <!@model IEnumerable<TeaHouse.Models.Choice>
 
-
     @{
-        ViewBag.Title = "Tea House Menu Management";
+        ViewBag.Title = "Index";
     }
 
-    <h2>Tea House Menu Management</h2>
+    <h2>2. Review and Confirm your order</h2>
 
-
-
-    @using (Html.BeginForm("Index", "Choice", FormMethod.Get))
-    {
-        <p>
-            Search Keyword: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string) <input type="submit" value="Search" />
-        </p>
-    }
+    <p>
+        @Html.ActionLink("Confirm Order", "Create")
+    </p>
     <table class="table">
         <tr>
             <th>
-                @Html.ActionLink("Product", "Index", new { sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter })
-
+                Product
             </th>
             <th>
-                @Html.ActionLink("Type", "Index", new { sortOrder = ViewBag.TypeSortParm, currentFilter = ViewBag.CurrentFilter })
-
+                Type
             </th>
             <th>
-
-                @Html.ActionLink("Descriptions", "Index", new { currentFilter = ViewBag.CurrentFilter })
-            </th>
-            <th>
-                @Html.ActionLink("Price", "Index", new { sortOrder = ViewBag.PriceSortParm, currentFilter = ViewBag.CurrentFilter })
-
+                Price
             </th>
             <th></th>
         </tr>
@@ -49,20 +37,16 @@
                     @Html.DisplayFor(modelItem => item.SelectedFood.FoodType)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.SelectedFood.Detail)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.SelectedFood.Price)
                 </td>
                 <td>
-                    @Html.ActionLink("Add to Order", "Create", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
 
-
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                 </td>
             </tr>
         }
 
     </table>
+
     <br /> Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
 
