Bug fix in order controller

--- a/Views/OrderModel/OrderView.cshtml
+++ b/Views/OrderModel/OrderView.cshtml
@@ -10,28 +10,29 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.User)
+            Order Number
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.OrderTime)
+            Ordered Time
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.User)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OrderTime)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "OrderDetails", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Id)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.OrderTime)
+    </td>
+    
+    <td>
+
+        @Html.ActionLink("Details", "OrderDetails", new { id = item.Id }) |
+
+    </td>
+</tr>
 }
 
 </table>
