First completed build
As a customer I wish to order a drink/snack.
As a customer I wish to see what I have ordered.
As a customer I wish to add to my current order for a drink/snack.
As a customer I wish to cancel my order for a drink/snack.
As the admin I wish to enter details of the drinks/snacks I have for sale.
As the admin I wish to read the details of the drinks/snacks I have for sale.
As the admin I wish to view a customer’s order(s).
As the admin I wish to edit the details of the drinks/snacks I have for sale.
As the admin I wish to withdraw a drink/snack from sale.

--- a/Views/OrderModel/Details.cshtml
+++ b/Views/OrderModel/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model TeaHouse.Models.OrderModels
+﻿@model TeaHouse.Models.Food
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>OrderModels</h4>
+    <h4>Food</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -15,20 +15,36 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.User)
+            @Html.DisplayFor(model => model.Name)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.OrderTime)
+            @Html.DisplayNameFor(model => model.FoodType)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.OrderTime)
+            @Html.DisplayFor(model => model.FoodType)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Detail)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Detail)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Price)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Price)
         </dd>
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+
+    @Html.ActionLink("Back to List", "OrderView")
 </p>
