--- a/Views/OrderModel/OrderDetails.cshtml
+++ b/Views/OrderModel/OrderDetails.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "OrderDetails";
 }
 
-<h2>View Orders</h2>
-
+<h2>Confirmed Order Details</h2>
+<hr />
 
 <table class="table">
     <tr>
