--- a/Views/Choice/Index.cshtml
+++ b/Views/Choice/Index.cshtml
@@ -8,9 +8,11 @@
         ViewBag.Title = "selectorder";
     }
 
-    <h2>1. Select your order</h2>
-
-   
+    <h2>1.Select your Choice</h2>
+    <hr />
+    <h4>Select your favorite item and press “Add to Order” next to it to place an order.</h4>
+    <h4>Or press “Details” for a detailed view of the item.</h4>
+    <hr />
 
     @using (Html.BeginForm("Index", "Food", FormMethod.Get))
     {
@@ -18,6 +20,7 @@
             Search Keyword: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string) <input type="submit" value="Search" />
         </p>
     }
+    <hr />
     <table class="table">
         <tr>
             <th>
@@ -56,8 +59,8 @@
                 </td>
                 <td>
                     @Html.ActionLink("Add to Order", "Create", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) 
-                    
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+
 
                 </td>
             </tr>
