--- a/Views/OrderModel/Delete.cshtml
+++ b/Views/OrderModel/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to remove this?</h3>
 <div>
     
     <hr />
@@ -44,8 +44,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Remove" class="btn btn-default" /> |
+            @Html.ActionLink("Back to Review Orders", "Index")
         </div>
     }
 </div>
