--- a/Views/OrderModel/Index.cshtml
+++ b/Views/OrderModel/Index.cshtml
@@ -8,8 +8,11 @@
         ViewBag.Title = "Index";
     }
 
-    <h2>2. Review and Confirm your order</h2>
-
+    <h2>2.Review your Order</h2>
+    <hr />
+    <h4>Review your pending order items and press “Remove” next to it if not wanted.</h4>
+    <h4>Afterwards press "Confirm Order" to place the order</h4>
+    <hr />
     <p>
         @Html.ActionLink("Confirm Order", "Create")
     </p>
@@ -41,7 +44,7 @@
                 </td>
                 <td>
 
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Remove", "Delete", new { id = item.Id })
                 </td>
             </tr>
         }
