--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,11 +9,11 @@
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    <div >
         <h2>Getting help</h2>
-        <p>
-            If you are unable to view or using our system, please directly reach our kiosk.
-        </p>
+        <h3>
+            If you got any difficulties while using our system, please directly reach our kiosk.
+        </h3>
         
     </div>
     
