Updated total calculation

--- a/Views/AdminOrder/Details.cshtml
+++ b/Views/AdminOrder/Details.cshtml
@@ -38,6 +38,7 @@
     }
 
 </table>
+<h3>Total : $@Model.Sum(x => x.SelectedFood.Price)</h3>
 <p>
 
     @Html.ActionLink("Back to Confirmed Orders", "Index")
