--- a/Views/OrderModel/Index.cshtml
+++ b/Views/OrderModel/Index.cshtml
@@ -50,6 +50,6 @@
         }
 
     </table>
-
+    <h3>Total : $@Model.Sum(x => x.SelectedFood.Price)</h3>
     <br /> Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
 
