--- a/Views/OrderModel/OrderDetails.cshtml
+++ b/Views/OrderModel/OrderDetails.cshtml
@@ -38,6 +38,8 @@
     }
 
 </table>
+<h3>Total : $@Model.Sum(x => x.SelectedFood.Price)</h3>
+
 <p>
 
     @Html.ActionLink("Back to Confirmed Orders", "OrderView")
