--- a/Views/AdminOrder/Details.cshtml
+++ b/Views/AdminOrder/Details.cshtml
@@ -10,6 +10,9 @@
 <table class="table">
     <tr>
         <th>
+            Status
+        </th>
+        <th>
             Product
         </th>
         <th>
@@ -24,6 +27,9 @@
     @foreach (var item in Model)
     {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SelectedFood.Name)
             </td>
