added status control to ordermodel

--- a/Views/AdminOrder/Details.cshtml
+++ b/Views/AdminOrder/Details.cshtml
@@ -47,5 +47,5 @@
 <h3>Total : $@Model.Sum(x => x.SelectedFood.Price)</h3>
 <p>
 
-    @Html.ActionLink("Back to Confirmed Orders", "Index")
+    @Html.ActionLink("Back to Customer Orders", "Index")
 </p>
