--- a/Views/AdminOrder/Index.cshtml
+++ b/Views/AdminOrder/Index.cshtml
@@ -19,7 +19,9 @@
         <th>
             Order Number
         </th>
-        
+        <th>
+            Order Status
+        </th>
         <th></th>
     </tr>
 
@@ -35,7 +37,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
-            
+            <td>
+                @Html.DisplayFor(modelItem => item.Status)
+            </td>
 
             <td>
 
