--- a/Views/AdminOrder/Index.cshtml
+++ b/Views/AdminOrder/Index.cshtml
@@ -46,8 +46,10 @@
 
 
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Order Fulfilled", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Order Paid", "Paid", new { id = item.Id })
+                @Html.ActionLink("Order Cancelled", "Cancelled", new { id = item.Id }) |
+                @Html.ActionLink("Order Fulfilled", "Edit", new { id = item.Id }) ||
+                @Html.ActionLink("Order Paid", "Paid", new { id = item.Id }) ||
+
             </td>
         </tr>
     }
