--- a/Views/OrderModel/Delete.cshtml
+++ b/Views/OrderModel/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Remove Selection</h2>
 
 <h3>Are you sure you want to remove this?</h3>
 <div>
