--- a/Views/Choice/Index.cshtml
+++ b/Views/Choice/Index.cshtml
@@ -58,7 +58,9 @@
                     @Html.DisplayFor(modelItem => item.Price)
                 </td>
                 <td>
-                    @Html.ActionLink("Add to Order", "Create", new { id = item.Id }) |
+                    @Html.ActionLink("Add to Order", "Create", new { id = item.Id },
+ 
+               new { onclick = "return confirm('Are sure wants to add to selction?');" }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id })
 
 
